# cloudflare-manager

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: linter.yml  publish.yml
cloudflare_manager/: __main__.py  config.py  main.py  models.py  notify.py  utils.py
