[tool.poetry]
name = "cloudflare-manager"
version = "1.0.0"
description = ""
authors = ["Diego Alloza González <sralloza@gmail.com>"]

[tool.poetry.scripts]
cloudflare-manager = "cloudflare_manager.main:main"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
pydantic = "^1.8.2"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
